chose: Add CORS policy-allowed source URL